# german-protest-registrations

./: .cruft.json  .gitignore  CITATION.cff  Dockerfile  MONITORING_COMPLETE.md  MONITORING_FILES.txt  MONITORING_QUICKSTART.md  MONITORING_README.md  MONITORING_SETUP.md  README.md  TASK_COMPLETION_SUMMARY.md  categorization_schema.json  docker-compose.yml  download_2023_data.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
cron/: monitor.cron
data/interim/: unparsable_dates.json  unparsable_participant_numbers.json
data/processed/: german_protest_registrations_12_cities_2023.csv  german_protest_registrations_4_cities_2018-2023.csv
docs/: index.html
docs/assets/: index-B_QKbOMq.js  index-CNiTlOcw.js  index-CghzNK8o.js  index-CrCvNe_H.js  index-DE5-Gzwe.css  index-DJqQ486_.css  index-FT1GFz-I.js  (+1 more)
foi-requests/: 2024_2025_requests_research.json  FETCH_SUMMARY.md  berlin_2023_2024_metadata.json  berlin_request_308169.json  demonstration_data_status_report.md  foi_requests_2024_2025.md  fragdenstaat_oauth.json  fragdenstaat_requests.json  german_protest_analysis_report.md  german_protest_data_analysis.json  koeln_requests_only.json  user_requests_discussion_history.json
reports/: _quarto.yml  references.bib  report.qmd
scripts/: README.md  install_monitoring.sh  monitor.sh  monitor_fragdenstaat.py  test_setup.py
systemd/: fragdenstaat-monitor.service  fragdenstaat-monitor.timer
tests/: __init__.py  test_data_quality.py  test_import.py
viz/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.js
(+249 files in other folders)
