[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "german-protest-registrations"
version = "0.1.0"
description = "German Protest Registrations Dataset with AI categorization"
authors = [{name = "David Pomerenke", email = "davidpomerenke@mailbox.org"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "odfpy>=1.4.0",
    "dateparser>=1.2.0",
    "tabula-py>=2.9.0",
    "pdfplumber>=0.11.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "aiohttp>=3.9.0",
    "diskcache>=5.6.0",
    "streamlit>=1.29.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
    "swifter>=1.4.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "black>=23.11.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
